@@ -5,6 +5,8 @@ TODO: maybe implement a default message channel, very much like Erlang's
       actor model (which is cool in a lot of important aspects (failures!),
       but very lacking in others (higher level ipc)).
 
+	- move ->throw into the Coro class because it only works on coro objects.
+
 4.803 Mon Nov  3 17:16:12 CET 2008
 	- use a global asm statement to become independent of gcc otpimisations
           for CORO_ASM (thanks to pippijn for the idea).
